# obstacle_detection_ws

./: .gitignore  LICENSE  README.md  launch_modules.py  launch_modules.sh
src/camera_lidar_logger/: CMakeLists.txt  README.md  package.xml
src/camera_lidar_logger/launch/: topic_logger.launch  topics_logger.launch
src/camera_lidar_logger/scripts/: detection_plotter.py  detections.html  obstacles_log_17_05_19_06_2024.csv  topic_logger.py
src/camera_lidar_logger/srv/: emergencyStop.srv
src/camera_od/: CMakeLists.txt  README.md  package.xml
src/camera_od/launch/: camera_od.launch
src/camera_od/msg/: CameraOD.msg  CameraOd.msg
src/camera_od/scripts/: yolo_object_detector.py
src/event_recorder/: CMakeLists.txt  package.xml
src/event_recorder/launch/: record_event.launch
src/event_recorder/scripts/: screen_recorder.py
src/lidar_camera_gt/: CMakeLists.txt  README.md  package.xml
src/lidar_camera_gt/launch/: calibrate_point_cloud_threshold.launch  transform_point_cloud.launch
src/lidar_camera_gt/scripts/: calibrate_point_cloud_threshold.py  publish_lidar_points_gt.py
src/obstacle_detector/: CMakeLists.txt  package.xml
src/obstacle_detector/launch/: detector.launch
src/obstacle_detector/msg/: CameraODArray.msg
src/obstacle_detector/scripts/: camera_obstacle_detector.py  lidar_obstacle_detector.py
