<?xml version="1.0"?>
<package format="2">
  <name>camera_od</name>
  <version>0.0.0</version>
  <description>The camera_od package</description>

  <maintainer email="rajathm@virya.ai">infy</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>
